# kubecon-ai-days-talk

./: .gitignore  README.md
docs/presentation/: AIF360.md  ART.md  BrokenHill.md  InspectAIOpenUK.md  Ollama.md  TextAttack.md
notebooks/AIF360/bias_advertising/: AIF360_tutorial_bias_advertising.ipynb  README.md  pyproject.toml
notebooks/BrokenHill/: README.md
notebooks/Ollama/: Ollama.ipynb  README.md
notebooks/TextAttack/: TextAttack.ipynb  pyproject.toml
notebooks/art/: README.md  attack_database_reconstruction.ipynb  pyproject.toml
notebooks/inspectAIOpenUK/: README.md  inspectOpenUK.ipynb  pyproject.toml
notebooks/inspectAIOpenUK/logs/: 2025-03-11T19-09-48+00-00_agentharm_MNxgVUL8qwXveLGaN4DTBw.eval
notebooks/inspectAIOpenUK/logs_archive/: 2025-02-18T12-19-59+00-00_gpqa-diamond_heja6k5rgecbsSzwtCEJ2E.eval  2025-03-11T18-36-20+00-00_agentharm_gxkv5WUkMqgNeA4zd2WduN.eval  2025-03-11T18-50-22+00-00_agentharm_3DH86fPyyzL7zjzexB2XsY.eval  2025-03-11T18-59-18+00-00_agentharm_DEybRKwicpCecTaRUjHJHx.eval
