[project]
name = "content"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "inspect-evals @ git+https://github.com/UKGovernmentBEIS/inspect_evals.git",
    "inspect-ai (>=0.3.66,<0.4.0)",
    "openai (>=1.63.2,<2.0.0)",
    "transformers (>=4.49.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
