[project]
name = "aif360-bias-advertising"
version = "0.1.0"
description = ""
authors = [
    {name = "Alberto",email = "albrodfer1@github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aif360 @ git+https://github.com/Trusted-AI/AIF360",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
